made changes in admin pannel

--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,7 @@ body{
 #leftnav
 	{
 		position:fixed;
-		background-color:#111;
+		background-color:white;
 		width:200px;
 		top:7%;
 		height:650px;
