--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body{
 .nav ul li a
 	{
 		text-decoration:none;
-		color:#000;
+		color:white;
 	}
 
 .nav ul li a:hover
@@ -136,7 +136,7 @@ body{
 .nav1 ul li a
 	{
 		text-decoration:none;
-		color:#444;
+		color:red;
 	}
 	
 .nav1 ul li a:hover
